version/0.17/_sources/api/solver/_autosummary/settings/change_numerics.rst.txt
:orphan:

.. _change_numerics:

change_numerics
===============

.. autoclass:: ansys.fluent.core.solver.settings_232.change_numerics.change_numerics
    :show-inheritance:

.. rubric:: Arguments

==============================================================   =======================================

Argument                                                                                         Summary

==============================================================   =======================================
:ref:`use_sided_area_vector <use_sided_area_vector>`                      'use_sided_area_vector' child.

:ref:`use_nci_sided_area_vectors <use_nci_sided_area_vectors>`       'use_nci_sided_area_vectors' child.

:ref:`recrete <recrete>`                                                                'recrete' child.

==============================================================   =======================================

.. rubric:: Included in:

==========================================================================   ===========================================

Parent                                                                                                           Summary

==========================================================================   ===========================================
:ref:`non_conformal_interface_numerics <non_conformal_interface_numerics>`       Setting non-conformal numerics options.

==========================================================================   ===========================================

