version/0.24/_sources/api/solver/_autosummary/settings/change_numerics.rst.txt
:orphan:

.. _change_numerics:

change_numerics
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.change_numerics.change_numerics
    :show-inheritance:

.. rubric:: Arguments

==============================================================   ===================================================================================

Argument                                                                                                                                     Summary

==============================================================   ===================================================================================
:ref:`use_sided_area_vector <use_sided_area_vector>`                           Enforce watertight cells for fluid-solid and solid-solid interfaces?.

:ref:`use_nci_sided_area_vectors <use_nci_sided_area_vectors>`       Use enhanced gradient computations for fluid-solid and solid-solid interfaces?.

:ref:`recreate <recreate>`                                                                                       Recreate non-conformal interfaces?.

==============================================================   ===================================================================================

.. rubric:: Included in:

==========================================================================   ===========================================

Parent                                                                                                           Summary

==========================================================================   ===========================================
:ref:`non_conformal_interface_numerics <non_conformal_interface_numerics>`       Setting non-conformal numerics options.

==========================================================================   ===========================================

